--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
 /* Specific styles */
-.background-color {
+body {
     background: #d4a9c8;
 }
 
 h1 {
-    color: hotpink;
+    color: #007A6B;
 }
 
 button {
@@ -12,10 +12,15 @@ button {
     height: 3rem;
     border-radius: 0.5rem;
     border: none;
+    background: #EBE0D0;
 }
 button:hover {
     background: hotpink;
     color: #FFFF;
+}
+
+nav {
+    height: 3rem;
 }
 
 /* Reusable styles */
@@ -34,6 +39,10 @@ button:hover {
 
 .align-center {
     align-items: center;
+}
+
+.space-evenly {
+    justify-content: space-evenly;
 }
 
 
