--- a/main.css
+++ b/main.css
@@ -3,6 +3,22 @@ body {
     background: #d4a9c8;
 }
 
+a:link {
+    color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: #FFFF;
+}
+
+a {
+    text-decoration: none;
+}
+
 h1 {
     color: #007A6B;
 }
@@ -14,6 +30,7 @@ button {
     border: none;
     background: #EBE0D0;
 }
+
 button:hover {
     background: hotpink;
     color: #FFFF;
@@ -44,5 +61,6 @@ nav {
 .space-evenly {
     justify-content: space-evenly;
 }
+
 
 
