--- a/main.css
+++ b/main.css
@@ -24,6 +24,12 @@ h1 {
     color: #007A6B;
 }
 
+.nav-position {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
 button {
     width: 8rem;
     height: 3rem;
@@ -52,11 +58,8 @@ nav {
     flex-direction: column;
 }
 
-.justify-center {
+.center {
     justify-content: center;
-}
-
-.align-center {
     align-items: center;
 }
 
@@ -70,6 +73,10 @@ nav {
 
 .full-height {
     height: 100%;
+}
+
+.gap {
+    gap: 8em;
 }
 
 
